[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/UI/ListUI/ListMonsterBarrackUI/ListMonsterBarrackUI.gd" type="Script" id=1]
[ext_resource path="res://src/UI/HUD/Hp bar.tscn" type="PackedScene" id=2]

[node name="ListMonsterBarrackUI" type="HBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/separation = 20
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 100.0
margin_right = 198.0
margin_bottom = 80.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="VBoxContainer"]
margin_top = 22.0
margin_right = 98.0
margin_bottom = 36.0
text = "NOM NOM"

[node name="SoldierLvlLabel" type="Label" parent="VBoxContainer"]
margin_top = 40.0
margin_right = 98.0
margin_bottom = 54.0
text = "Scientist lvl. XX"

[node name="Hp bar" parent="VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 58.0
margin_right = 98.0
margin_bottom = 58.0

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_left = 218.0
margin_right = 265.0
margin_bottom = 80.0
alignment = 1

[node name="ButtonEquip" type="Button" parent="VBoxContainer2"]
margin_top = 18.0
margin_right = 47.0
margin_bottom = 38.0
text = "Equip"

[node name="ButtonKick" type="Button" parent="VBoxContainer2"]
margin_top = 42.0
margin_right = 47.0
margin_bottom = 62.0
text = "Kick"
